microservices/quotemachine/quoteserver/deployment/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: quoteserver
  name: quoteserver
  namespace: quotemachine
spec:
  replicas: 1
  selector:
    deploymentconfig: quoteserver
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: quoteserver
        deploymentconfig: quoteserver       
    spec:
      containers:
      - image: <CONTAINER>
        imagePullPolicy: Always
        name: quoteserver
        ports:
        - containerPort: 8001
          protocol: TCP
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - quoteserver
      from:
        kind: ImageStreamTag
        name: quoteserver:latest
        namespace: <PROJECT>
    type: ImageChange
  - type: ConfigChange
